Primer commit ADDON2

--- a/addon2.html
+++ b/addon2.html
@@ -6,10 +6,7 @@
     </head>
 
     <body>
-        <h1>Branch Addon2</h1>
-        
-        <p>Prueba de git y branches</p>
-        <p>Este es el primer branch "addon2"</p>
+        <h1>Versión ADDON2 de HTML</h1>
     </body>
 
 
