Segundo commit Addon3

--- a/addon2.html
+++ b/addon2.html
@@ -6,10 +6,7 @@
     </head>
 
     <body>
-        <h1>Versión 3 de HTML</h1>
-        
-        <p>Prueba de git y branches</p>
-        <p>Este es el primer branch "Addon3"</p>
+        <h1>Versión ADDON3 de HTML</h1>
     </body>
 
 
