Commit de Addon2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Branch Addon2</h1>
         
         <p>Prueba de git y branches</p>
-        <p>Este es el primer branch "addon2"</p>
+        <p>Este es el branch "addon2"</p>
     </body>
 
 
