--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <h1>Versión 3 de HTML</h1>
         
-        <p>Prueba de git y branches</p>
-        <p>Este es el primer branch "Addon3"</p>
+        <p>Este es el fix 1</p>
     </body>
 
 
