--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Versión 3 de HTML< modificacion local/h1>
+        <h1>Versión 3 de HTML modificacion local</h1>
         
         <p>Este es el fix 1</p>
     </body>
